--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,2 @@
-/Users/edgaryepez/AmericanShip/boxdetection-app/venv/lib/python3.12/site-packages/tensorflow/libtensorflow_cc.2.dylib filter=lfs diff=lfs merge=lfs -text
+*.dylib filter=lfs diff=lfs merge=lfs -text
 venv/lib/python3.12/site-packages/tensorflow/libtensorflow_cc.2.dylib filter=lfs diff=lfs merge=lfs -text
